# libpeas

./: .gitignore  .gitlab-ci.yml  Makefile.am  NEWS  README  README.md  configure.ac  libpeas.doap  meson.build  meson_options.txt
data/: meson.build
data/glade/: Makefile.am  libpeas-gtk.xml.in  meson.build
data/icons/: meson.build
docs/reference/: libpeas-gtk-urlmap.js  libpeas-gtk.toml.in  libpeas-sections.txt  libpeas-urlmap.js  libpeas.toml.in  meson.build  migrating-1to2.md
libpeas/: Makefile.am  libpeas.h  meson.build  peas-activatable.c  peas-activatable.h  peas-autocleanups.h  peas-debug.c  peas-debug.h  peas-dirs.c  peas-dirs.h  peas-engine-priv.h  peas-engine.c  peas-engine.h  peas-extension-base.c  peas-extension-base.h  peas-extension-set.c  peas-extension-set.h  peas-extension.c  peas-extension.h  peas-i18n-priv.h  peas-i18n.c  peas-i18n.h  peas-introspection.c  peas-introspection.h  peas-macros.h  peas-marshal.list  peas-object-module.c  peas-object-module.h  peas-plugin-info-priv.h  peas-plugin-info.c  peas-plugin-info.h  peas-plugin-loader-c.c  peas-plugin-loader-c.h  peas-plugin-loader.c  peas-plugin-loader.h  peas-sources.mak  peas-utils-osx.h  peas-utils-osx.m  peas-utils.c  peas-utils.h  (+3 more)
libpeas-gtk/: Makefile.am  meson.build  peas-gtk-configurable.c  peas-gtk-configurable.h  peas-gtk-disable-plugins-dialog.c  peas-gtk-plugin-manager-store.h  peas-gtk-plugin-manager-view.c  peas-gtk-plugin-manager-view.h  peas-gtk-plugin-manager.c  peas-gtk-plugin-manager.h  peas-gtk-sources.mak
loaders/: meson.build
loaders/gjs/: meson.build  peas-plugin-loader-gjs.cpp  peas-plugin-loader-gjs.h
loaders/lua5.1/: Makefile.am  lua-loader-srcs.mak  meson.build  peas-lua-internal.c  peas-lua-internal.h  peas-lua-utils.c  peas-lua-utils.h  peas-plugin-loader-lua.c  peas-plugin-loader-lua.h
loaders/lua5.1/resources/: meson.build  peas-lua-strict.lua
loaders/python/: Makefile.am  meson.build  peas-plugin-loader-python.c  peas-plugin-loader-python.h  peas-python-internal.c  peas-python-internal.h  peas-python-internal.py  python-loader-sources.mak
loaders/python3/: Makefile.am  meson.build
peas-demo/: Makefile.am  meson.build  peas-demo-srcs.mak  peas-demo.c
peas-demo/plugins/: meson.build
peas-demo/plugins/helloworld/: Makefile.am  demo-helloworld-srcs.mak  meson.build
peas-demo/plugins/luahello/: meson.build
peas-demo/plugins/pythonhello/: meson.build  pythonhello.py
peas-demo/plugins/secondtime/: Makefile.am  demo-secondtime-srcs.mak  meson.build
po/: LINGUAS  Makevars  POTFILES.in  ab.po  be.po  bg.po  bn.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  gl.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  kw.po  lt.po  lv.po  meson.build  (+25 more)
po/its/: glade-catalog.its  glade-catalog.loc
subprojects/: glib.wrap
tests/: meson.build
tests/libpeas/: engine.c  extension-c.c  extension-gjs.c  extension-lua.c  extension-py.c  extension-set.c  meson.build  plugin-info.c
tests/libpeas-gtk/: meson.build  plugin-manager.c
tests/libpeas-gtk/plugins/: meson.build
tests/libpeas-gtk/plugins/builtin-configurable/: meson.build
tests/libpeas-gtk/plugins/configurable/: meson.build
tests/libpeas-gtk/plugins/valid-custom-icon/: meson.build
tests/libpeas-gtk/testing/: meson.build  testing.c  testing.h
tests/libpeas/introspection/: Makefile.am  introspection-abstract.c  introspection-abstract.h  introspection-activatable.c  introspection-activatable.h  introspection-base.c  introspection-base.h  introspection-callable.c  introspection-callable.h  introspection-has-prerequisite.c  introspection-has-prerequisite.h  introspection-prerequisite.c  introspection-prerequisite.h  introspection-unimplemented.c  introspection-unimplemented.h  meson.build  test-introspection-srcs.mak
tests/libpeas/plugins/: extension-gjs-nonexistent.plugin  extension-python3-nonexistent.plugin  meson.build
tests/libpeas/plugins/embedded/: embedded-plugin.c  embedded-plugin.h  meson.build
tests/libpeas/plugins/extension-c/: extension-c-abstract.c  extension-c-abstract.h  extension-c-missing-symbol-plugin.c  extension-c-missing-symbol.plugin  extension-c-plugin.c  extension-c-plugin.h  extension-c.plugin  meson.build
tests/libpeas/plugins/extension-gjs/: extension-gjs.gschema.xml  extension-gjs.js  extension-gjs.plugin  meson.build
tests/libpeas/plugins/extension-lua/: extension-lua51.lua  extension-lua51.plugin  meson.build
tests/libpeas/plugins/extension-python/: extension-py.gschema.xml.in  extension-py.plugin.in  extension-py.py.in  meson.build
tests/libpeas/testing/: meson.build  testing-extension.c  testing-extension.h  testing.c  testing.h
tests/plugins/: meson.build
tests/plugins/builtin/: builtin-plugin.c  builtin-plugin.h  meson.build
tests/plugins/has-dep/: has-dep-plugin.c  has-dep-plugin.h  meson.build
tests/plugins/loadable/: loadable-plugin.c  loadable-plugin.h  meson.build
tests/plugins/self-dep/: meson.build  self-dep-plugin.c  self-dep-plugin.h
tests/testing-util/: meson.build  peas-activatable.c  peas-activatable.h  peas-test-common.h  testing-util.c  testing-util.h
win32/: Makefile.am  Makefile.vc  build-rules-msvc.mak  config-msvc.mak  config.h.win32.in  configpy.py  create-lists-msvc.mak  detectenv-msvc.mak  generate-msvc.mak  info-msvc.mak  luaconfig.mak  peas-introspection-msvc.mak  pythonconfig.mak
