EXTRA_DIST =	\
	build-rules-msvc.mak	\
	config.h.win32	\
	configpy.py	\
	config-msvc.mak	\
	create-lists.bat	\
	create-lists-msvc.mak	\
	detectenv-msvc.mak	\
	generate-msvc.mak	\
	info-msvc.mak	\
	introspection-msvc.mak	\
	luaconfig.mak	\
	Makefile.vc	\
	pythonconfig.mak	\
	peas-introspection-msvc.mak
